--- a/stylee.css
+++ b/stylee.css
@@ -2392,12 +2392,18 @@ margin: 30px 0px 50px;
         margin: 0;
         padding: 30px 10px;
     height: auto;
+    display: flex;
+    align-items: center;
+    text-align: center;
     }
     .what-beta{
         order: 2;
-        align-items: center;
-        justify-content: center;
+        /* align-items: center;
+        justify-content: center; */
         padding: 20px;
+    }
+    .what-beta button{
+      width: 100%;
     }
     
     .what h6 {
@@ -2450,32 +2456,233 @@ margin: 30px 0px 50px;
         max-width: 40%;
     }
 }
-/* .blog{
-    height: 190px;
+.blog {
+    height: auto;
+    min-height: 190px;
     width: 100%;
-    background-color:#222222;
+    background-color: #222222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 15px;
+    text-align: center;
+}
+
+.blog-beta {
+    height: auto;
+    width: 100%;
+    max-width: 470px;
+}
+
+.blog-beta h6 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #fd8a20;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.blog-beta h2 {
+    font-size: 64px;
+    color: #ffffff;
+    margin: 10px 0;
+    line-height: 1.1;
+}
+
+.blog-beta p {
+    font-size: 15px;
+    color: #bebebe;
+    line-height: 1.5;
+}
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 768px) {
+    .blog {
+        padding: 25px 15px;
+    }
+    
+    .blog-beta h2 {
+        font-size: 48px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .blog {
+        padding: 20px 15px;
+    }
+    
+    .blog-beta h6 {
+        font-size: 18px;
+    }
+    
+    .blog-beta h2 {
+        font-size: 36px;
+    }
+    
+    .blog-beta p {
+        font-size: 14px;
+    }
+}
+.nemo {
+    height: auto;
+    min-height: 357px;
+    width: 100%;
+    background-color: #222222;
+    display: flex;
+    padding: 40px 20px;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap; /* Allow items to wrap on smaller screens */
+}
+
+.nemo-beta {
+    height: 355px;
+    max-width: 396px;
+    width: 100%;
+}
+
+.nemo-beta img {
+    height: auto;
+    max-height: 246px;
+    width: 100%;
+    max-width: 396px;
+    object-fit: cover; /* Ensures image maintains aspect ratio */
+}
+
+.nemo-text {
+    width: 100%;
+    max-width: 396px;
+}
+
+.nemo-text a {
+    text-decoration: none;
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: block;
+    margin: 0px 0px 8px;
+}
+
+.nemo-text span {
+    font-size: 15px;
+    color: #bebebe;
+    font-weight: 500;
+    margin: 0px 0px 13px;
+   
+}
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 900px) {
+    .nemo {
+        padding: 30px 15px;
+        gap: 20px;
+    }
+    
+    .nemo-beta, .nemo-text {
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nemo {
+        flex-direction: column;
+        padding: 30px 15px;
+    }
+    
+    .nemo-beta, .nemo-text {
+        max-width: 396px;
+        width: 100%;
+    }
+    
+    .nemo-text a {
+        font-size: 18px;
+        text-align: center;
+    }
+    
+    .nemo-text span {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .nemo {
+        padding: 25px 15px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+    }
+    .nemo-beta{
+        height: 300px;
+      
+    }
+    .nemo-text{
+       padding: 20px;
+    }
+    
+    .nemo-beta img {
+        height: auto;
+    }
+    
+    .nemo-text a {
+        font-size: 16px;
+    }
+    
+    .nemo-text span {
+        font-size: 14px;
+        margin: 0;
+    }
+    
+}
+.news {
+    height: 157px;
+    width: 100%;
+    background-color: #2f2e2e;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.blog-beta{
-    height: auto;
-    width: 470px;
-  
-}
-.blog-beta h6{
-    font-size: 20px;
 
-    font-weight: 700;
-    color:#fd8a20;
-    display: inline;
+.news-beta {
+    height: 57px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 115px;
 }
-.blog-beta h2{
-    font-size: 64px;
-    color: #ffffff;
+
+@media screen and (max-width: 768px) {
+    .news {
+        height: 130px;
+    }
+    
+    .news-beta {
+        gap: 60px;
+    }
 }
-.blog-beta p{
-    font-size: 15px;
-    color: #bebebe;
-    line-height: 1.5;
-} */
+
+@media screen and (max-width: 480px) {
+    .news {
+        height: 100px;
+    }
+    
+    .news-beta {
+        height: auto;
+        padding: 15px 0;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .news {
+        height: 80px;
+    }
+    
+    .news-beta {
+        padding: 10px 0;
+        gap: 15px;
+    }
+}
